fixed some css and structure as well as adding droppable functions

--- a/css/app.css
+++ b/css/app.css
@@ -1,29 +1,58 @@
 div#player-field{
 	background-image: url(../resources/football_pitch.png); 
-	width: 529px; 
+	width: 532px; 
 	height: 760px; 
 	border: 1px solid black;
+	margin-left: 10px;
 }
 
 
 div.defenders {
-    margin-top: 140px;
+	height: 253px;
+	width: 100%
+};
+div.midfielders {
+	height: 253px;
+	width: 100%
+};
+div.forwards {
+	height: 253px;
+	width: 100%
+};
+
+span.field-row{
+	height: 190px;
+	margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 15px;
+};
+
+
+	
+/*
+div.defenders {
+    margin-top: 195px;
     margin-bottom: 10px;
     margin-left: 35px;
 }
 
+
 div.midfielders {
-    margin-top: 175px;
+    margin-top: 195px;
     margin-bottom: 10px;
     margin-left: 35px;
 }
 
 div.forwards {
-    margin-top: 175px;
+    margin-top: 195px;
     margin-bottom: 10px;
-    margin-left: 35px;
+    margin-left: 45px;
 }
 
 .player-box-dropped{
-	
+	float: left;
+	display: inline-block;
 };
+*/
+
+
